--- a/iOSTest/en.lproj/Localizable.strings
+++ b/iOSTest/en.lproj/Localizable.strings
@@ -12,3 +12,5 @@
 "HomeView.Label.popular" = "Popular";
 "HomeView.Label.topRated" = "Top Rated";
 "HomeView.Label.upcoming" = "Upcoming";
+
+"DetailView.Label.overview" = "Overview";
