--- a/iOSTest/es.lproj/Localizable.strings
+++ b/iOSTest/es.lproj/Localizable.strings
@@ -12,3 +12,5 @@
 "HomeView.Label.popular" = "Popular";
 "HomeView.Label.topRated" = "Mejor calificado";
 "HomeView.Label.upcoming" = "Próximo";
+
+"DetailView.Label.overview" = "Resumen";
